# mint

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  todo-abi-part2.md
.github/workflows/: ci.yml  homebrew.yml  nix.yml  release-build.yml  release-dry-run.yml  release.yml  winget.yml
crates/mint-cli/: Cargo.toml
crates/mint-cli/skill/mint/: SKILL.md
crates/mint-cli/skill/mint/references/: examples.md
crates/mint-cli/src/: args.rs  data.rs  data_args.rs  layout_args.rs  lib.rs  main.rs  output_args.rs
crates/mint-cli/src/commands/: mod.rs  stats.rs  writer.rs
crates/mint-cli/src/visuals/: formatters.rs  mod.rs
crates/mint-cli/tests/: block_expansion.rs  cli_commands.rs  cli_flags.rs  crc_variations.rs  export_json.rs  header_generation.rs  mixed_features.rs  no_excel.rs  smoke.rs  statistics.rs
crates/mint-cli/tests/common/: mod.rs
crates/mint-core/: Cargo.toml
crates/mint-core/src/: build.rs  error.rs  fingerprint.rs  header.rs  lib.rs
crates/mint-core/src/data/: error.rs  excel.rs  helpers.rs  json.rs  mod.rs
crates/mint-core/src/layout/: abi.rs  block.rs  conversions.rs  entry.rs  error.rs  fingerprint.rs  mod.rs  resolved.rs  scalar_type.rs  settings.rs  used_values.rs  value.rs
crates/mint-core/src/output/: error.rs  mod.rs  report.rs
crates/mint-core/tests/: aggregate_alignment.rs  bitmap.rs  consts.rs  data.json  fingerprint.rs  fixed_point.rs  header.rs  json.rs  layout_rejections.rs  library_api.rs  ref_pointer.rs  resolved_layout.rs  size_enforcement.rs  strict_conversions.rs  variant_stack.rs
crates/mint-core/tests/common/: mod.rs
crates/mint-core/tests/data/: blocks.toml  data.xlsx
crates/mint-python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/mint-python/python/mint/: __init__.py  __init__.pyi
crates/mint-python/src/: lib.rs  types.rs  util.rs
crates/mint-python/tests/: test_bindings.py
doc/: cli.md  const-design.md  header-generation.md  layout.md  python.md  sources.md
doc/examples/: block.toml  blocks.h
doc/plans/: json-export-used-values.md
skill/mint/: SKILL.md
skill/mint/references/: examples.md
src/: args.rs  lib.rs  main.rs
src/commands/: mod.rs  stats.rs
src/data/: args.rs  excel.rs  json.rs  mod.rs
src/layout/: args.rs  block.rs  conversions.rs  entry.rs  header.rs  mod.rs  scalar_type.rs  settings.rs  value.rs
src/output/: checksum.rs  mod.rs
src/visuals/: formatters.rs  mod.rs
tests/: bitmap.rs  block_expansion.rs  cli_flags.rs  consts.rs  crc_variations.rs  export_json.rs  fixed_point.rs  http.rs  json.rs  layout_rejections.rs  mixed_features.rs  no_excel.rs  postgres.rs  ref_pointer.rs  size_enforcement.rs  smoke.rs  statistics.rs  strict_conversions.rs  variant_stack.rs  word_addressing.rs
tests/common/: mod.rs
tests/data/: blocks.toml  blocks.yaml
