[package]
name = "mint-cli"
version = "1.2.2"
edition = "2024"
description = "A CLI tool for building hex files from excel data and a layout definition."
license = "MIT"
readme = "README.md"
repository = "https://github.com/tomrford/mint"
categories = ["command-line-utilities"]
keywords = ["flash", "hex", "layout", "excel", "data"]

exclude = ["flake.*", ".envrc", ".cursor/**", ".github/**"]

[[bin]]
name = "mint"
path = "src/main.rs"

[dependencies]
bin_file = "0.1.4"
calamine = "0.29.0"
clap = { version = "4.5.42", features = ["derive"] }
comfy-table = "7.1"
indexmap = { version = "2.10.0", features = ["serde"] }
percent-encoding = "2.3.2"
postgres = "0.19.12"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
toml = { version = "0.9.4", features = ["preserve_order"] }
ureq = "3.1.4"
