[workspace]
members = ["crates/mint-core", "crates/mint-cli"]
resolver = "3"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
implicit_clone = "warn"
assigning_clones = "warn"
cloned_instead_of_copied = "warn"
map_clone = "warn"
inefficient_to_string = "warn"
str_to_string = "warn"
