[workspace]
members = ["crates/mint-core", "crates/mint-cli", "crates/mint-python"]
resolver = "3"

[workspace.package]
version = "2.0.0"

[workspace.lints.clippy]
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
implicit_clone = "warn"
assigning_clones = "warn"
cloned_instead_of_copied = "warn"
map_clone = "warn"
inefficient_to_string = "warn"
str_to_string = "warn"
