[package]
name = "mint-cli"
version = "1.3.1"
edition = "2024"
description = "A CLI tool for building hex files from excel data and a layout definition."
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/tomrford/mint"
categories = ["command-line-utilities"]
keywords = ["flash", "hex", "layout", "excel", "data"]

[[bin]]
name = "mint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
comfy-table = "7.1"
mint-core = { path = "../mint-core", version = "1.3.1" }

[dev-dependencies]
serde_json = "1.0.142"

[lints]
workspace = true
