[package]
name = "mint-core"
version.workspace = true
edition = "2024"
description = "Core library for building hex files from data and layout definitions."
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/tomrford/mint"
categories = ["embedded", "encoding"]
keywords = ["flash", "hex", "layout", "excel", "data"]

exclude = ["flake.*", ".envrc", ".cursor/**", ".github/**"]

[dependencies]
bin_file = "0.1.4"
calamine = "0.34.0"
indexmap = { version = "2.10.0", features = ["serde"] }
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
toml = { version = "1.1.2", features = ["preserve_order"] }

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
implicit_clone = "warn"
assigning_clones = "warn"
cloned_instead_of_copied = "warn"
map_clone = "warn"
inefficient_to_string = "warn"
str_to_string = "warn"
