[package]
name = "mint-core"
version.workspace = true
edition = "2024"
description = "Core library for building hex files from data and layout definitions."
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/tomrford/mint"
categories = ["embedded", "encoding"]
keywords = ["flash", "hex", "layout", "excel", "data"]

exclude = ["flake.*", ".envrc", ".cursor/**", ".github/**"]

[dependencies]
bin_file = "0.1.4"
calamine = "0.34.0"
indexmap = { version = "2.10.0", features = ["serde"] }
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
thiserror = "2.0.12"
toml = { version = "1.1.2", features = ["preserve_order"] }

[lints]
workspace = true
