[package]
name = "mint-python"
version = "1.3.1"
edition = "2024"
description = "Python bindings for mint-core."
license = "MIT"
readme = "README.md"
repository = "https://github.com/tomrford/mint"
keywords = ["flash", "hex", "layout", "excel", "python"]

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]
test = false
doctest = false

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
mint-core = { path = "../mint-core", version = "1.3.1" }
pyo3 = { version = "0.28.3", features = ["abi3-py310"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }

[lints]
workspace = true
