[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "mint-python"
version = "1.3.1"
description = "Python bindings for mint-core."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Embedded Systems",
]

[dependency-groups]
dev = [
  "maturin>=1.13,<2",
  "pytest>=9,<10",
]

[tool.maturin]
module-name = "mint._native"
python-source = "python"
features = ["extension-module"]
