[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "mint-python"
dynamic = ["version"]
description = "Python bindings for mint-core."
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Embedded Systems",
]

[dependency-groups]
dev = [
  "maturin>=1.13,<2",
  "pytest>=9,<10",
  "ruff>=0.14,<0.15",
]

[tool.ruff]
target-version = "py310"

[tool.maturin]
module-name = "mint._native"
python-source = "python"
features = ["extension-module"]
